# text2graph

./: config.py  example.ipynb  main.py  pyproject.toml  utils.py
