[tool.poetry]
name = "text2graph"
version = "0.1.0"
description = "Transform text to RDF triples"
authors = ["Magdalena Surowka <magdalena@surowka.ch>"]

[tool.poetry.dependencies]
python = "^3.7.1"
Flask = "^1.1.2"
pandas = "^1.2.3"
opennre = {git = "https://github.com/thunlp/OpenNRE.git"}
torch = "^1.6.0"
transformers = "~=4.3.0"
pytest = "^5.3.2"
scikit-learn = "^0.22.1"
scipy = "^1.4.1"
nltk = "^3.4.5"
neuralcoref = "^4.0"
spacy = "2.1.0"
cython = ">=0.25"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
